{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 32,
  "lineage": "1647cf54-f00c-ee4f-762e-adb36f0e76b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "aws-crud-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:245154219216:loadbalancer/app/wang-lb/54fffa66c329a28f",
            "arn_suffix": "app/wang-lb/54fffa66c329a28f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "wang-lb-1954452408.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:245154219216:loadbalancer/app/wang-lb/54fffa66c329a28f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wang-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b1be2595716468c2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0112f9c4617ee7d3d"
              },
              {
                "subnet_id": "subnet-0351608898f8a72ab"
              },
              {
                "subnet_id": "subnet-0f4c87f412632e488"
              }
            ],
            "subnets": [
              "subnet-0112f9c4617ee7d3d",
              "subnet-0351608898f8a72ab",
              "subnet-0f4c87f412632e488"
            ],
            "vpc_id": "vpc-0e2232ea7e03046b9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_subnet.default_subnet_c",
            "aws_security_group.aws-crud-lb_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:subnet/subnet-0112f9c4617ee7d3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0112f9c4617ee7d3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245154219216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e2232ea7e03046b9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:subnet/subnet-0f4c87f412632e488",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0f4c87f412632e488",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245154219216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e2232ea7e03046b9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:subnet/subnet-0351608898f8a72ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0351608898f8a72ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245154219216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e2232ea7e03046b9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:vpc/vpc-0e2232ea7e03046b9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-062813752fb0152c1",
            "default_route_table_id": "rtb-0683742c62d0185f8",
            "default_security_group_id": "sg-09d5b54811c44b354",
            "dhcp_options_id": "dopt-0bf1865d2448564f6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0e2232ea7e03046b9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0683742c62d0185f8",
            "owner_id": "245154219216"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e8a34246278c21e4",
            "arn": "arn:aws:ec2:us-east-1:245154219216:instance/i-04782f62f8d4f792a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04782f62f8d4f792a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09625a3b06b3618a8",
            "private_dns": "ip-172-31-33-141.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.141",
            "public_dns": "ec2-54-175-25-48.compute-1.amazonaws.com",
            "public_ip": "54.175.25.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0775bea575f6c3620",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_web_traffic"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4c87f412632e488",
            "tags": {
              "Name": "web-app"
            },
            "tags_all": {
              "Name": "web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05832f44058a4c4c8"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_web_traffic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "aws-crud-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:245154219216:listener/app/wang-lb/54fffa66c329a28f/5da264d3d1d9c2c5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:245154219216:targetgroup/wang-target-group/5c49a92efdbb2633",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:245154219216:listener/app/wang-lb/54fffa66c329a28f/5da264d3d1d9c2c5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:245154219216:loadbalancer/app/wang-lb/54fffa66c329a28f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.aws-crud-lb",
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_subnet.default_subnet_c",
            "aws_default_vpc.default_vpc",
            "aws_lb_target_group.aws-crud-target_group",
            "aws_security_group.aws-crud-lb_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws-crud-target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:245154219216:targetgroup/wang-target-group/5c49a92efdbb2633",
            "arn_suffix": "targetgroup/wang-target-group/5c49a92efdbb2633",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:245154219216:targetgroup/wang-target-group/5c49a92efdbb2633",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wang-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e2232ea7e03046b9"
          },
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:security-group/sg-05832f44058a4c4c8",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05832f44058a4c4c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "245154219216",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_traffic"
            },
            "tags_all": {
              "Name": "allow_web_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2232ea7e03046b9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-crud-lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:security-group/sg-0b1be2595716468c2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1be2595716468c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231106161240512600000001",
            "name_prefix": "terraform-",
            "owner_id": "245154219216",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2232ea7e03046b9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-crud-service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:security-group/sg-0fbf88ab9ee0f24f7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbf88ab9ee0f24f7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0b1be2595716468c2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20231106161244227500000002",
            "name_prefix": "terraform-",
            "owner_id": "245154219216",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2232ea7e03046b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws-crud-lb_security_group"
          ]
        }
      ]
    }
  ]
}